<resources>
    <string name="app_name">Safe Space</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_subtitle">Enter details to log in</string>
    <string name="account_btn_login">Log In</string>
    <string name="account_log_in_forgot_password_prompt">Forgotten Password? Reset Password here</string>
    <string name="sign_in_email">Email Address</string>
    <string name="account_not_logged_in_create_account">First Time User? Register here</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_up_title">Customer Registration Screen</string>
    <string name="sign_up_subtitle">Enter details to sign up</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_first_name">Customer First Name</string>
    <string name="sign_up_last_name">Customer Last Name</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_password">Retype Password</string>
    <string name="sign_up_phone_number">Mobile Number</string>
    <string name="sign_up_license_number">Enter Your License Number</string>
    <string name="sign_up_login_prompt">Have an account? Login Here</string>
    <string name="account_btn_sign_up">Register</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_landing">Landing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tracking_maps">TrackingMapsActivity</string>
    <string name="landing_button_client_role">Client With Addiction Problem</string>
    <string name="customer_sign_in_title">Login Screen for Customer</string>
    <string name="facility_sign_in_title">Company Login Screen</string>
    <string name="forgot_password_title">Forgot Password\n</string>
    <string name="forgot_password_subtitle">Enter Registered Email to Reset Password</string>
    <string name="account_forgot_password_log_in_prompt">Remembered Password</string>
    <string name="account_btn_reset_password">Send Reset Password Link</string>
    <string name="sign_up_facility_name">Enter Facility Name</string>
    <string name="sign_up_facility_physical_address">Enter Facility Physical Address</string>
    <string name="sign_up_facility_email">Enter Facility Email Address</string>
    <string name="sign_up_facility_phone_number">Enter Facility Phone Number</string>
    <string name="landing_button_facility_role">Rehabilitation Facility</string>
    <string name="sign_up_address">Enter Your Address</string>
    <string name="my_address">Here</string>
    <string name="book_rehab">Place Request for Chosen Service</string>
    <string name="book_appointment_title">Place Request for Service</string>
    <string name="book_appointment_service">Select Type of Provided Service</string>
    <string name="book_appointment_date">Select Date</string>
    <string name="book_appointment_time">Select Appointment Time</string>
    <string name="book_appointment_description">Request Text</string>
    <string name="confirm_appointment_book">Confirm Book</string>
    <string name="facility_navigation_profile">Profile</string>
    <string name="facility_navigation_customer_requests">Customer Requests</string>
    <string name="facility_navigation_feedback"><![CDATA[Ratings & Feedback]]></string>
    <string name="facility_navigation_invoice"><![CDATA[Notification & Invoice]]></string>
    <string name="user_request_title">User Request</string>
    <string name="btn_accept_customer_request">Accept</string>
    <string name="btn_reject_customer_request">Reject</string>
    <string name="profile_title">Facility Profile</string>
    <string name="profile_name">Organisation Name</string>
    <string name="profile_email">Organisation Email</string>
    <string name="profile_address">Organisation Address</string>
    <string name="profile_phone">Organisation Phone Number</string>
    <string name="profile_date_joined">Date Joined</string>
    <string name="facility_edit_profile">Edit Profile</string>
    <string name="profile_services">Services</string>
    <string name="feedback_placeholder"><![CDATA[Place Feedback & Ratings]]></string>
    <string name="invoice_placeholder">View Invoices / Provide Payment</string>
    <string name="wallet_placeholder">Digital Wallet</string>
    <string name="notification_placeholder">View Notification</string>
    <string name="facility_add_service_title">Add Service to Facility Profile</string>
    <string name="facility_add_service_category">Category</string>
    <string name="facility_add_service_description">Service Name</string>
    <string name="facility_add_service_price">Service Price (If Applicable)(€)</string>
    <string name="facility_add_service_discounted_price">Discounted Price (If Applicable)(€)</string>
    <string name="add_service_available_places">Service Available Places (If Applicable)</string>
    <string name="facility_add_service_start_end_date">Start Date (if Applicable)</string>
    <string name="facility_add_service_schedule">Select Service Schedule</string>
    <string name="facility_add_service_submit_button">Submit</string>
    <string name="facility_add_service_next_service_button">Next Service</string>
    <string name="facility_customer_request_generate_invoice">Generate Invoice</string>
    <string name="facility_customer_request_rejected">rejected</string>
    <string name="txt_reject_customer_request">Reject Request</string>
    <string name="facility_schedule_meeting_title">Create Meeting Schedule for Accepted Request</string>
    <string name="facility_schedule_meeting_date">Schedule Meeting Date</string>
    <string name="facility_schedule_meeting_time">Schedule Meeting Time</string>
    <string name="facility_confirm_meeting_schedule">Confirm</string>
    <string name="facility_generated_invoice_customer_details_title">Customer Details</string>
    <string name="facility_generated_invoice_facility_details_title">Company Details</string>
    <string name="facility_generated_invoice_request_details_title">Service Request Details</string>
    <string name="facility_generated_invoice_confirm_button">Create Invoice</string>
    <string name="facility_new_record_title">Invoice Bank Record</string>
    <string name="facility_new_record_bank_name">Bank Name</string>
    <string name="facility_new_record_account_iban">Account IBAN</string>
    <string name="facility_new_record_account_holder_name">Account Holder Name</string>
    <string name="facility_new_record_confirm_btn">Confirm Invoice Generation</string>
    <string name="txt_invoice_status_not_generated">not generated</string>
    <string name="txt_invoice_status_generated">generated</string>
    <string name="txt_invoice_payment_status_paid">paid</string>
    <string name="txt_invoice_payment_status_not_paid">not paid</string>
    <string name="client_generated_invoice_payment_button">Provide Payment</string>
    <string name="menu_logout">Logout</string>
    <string name="facility_submit_update_profile">Submit</string>
    <string name="facility_update_profile_title">Update Profile</string>
    <string name="facility_update_profile_phone_number">New Contact Number</string>
    <string name="facility_cancel_update_profile">Cancel</string>
    <string name="btn_client_booking_response_detail_okay">Okay</string>
    <string name="password_does_not_match">Entered Password and Retyped password do not match, please retype the correct value</string>
    <string name="create_digital_wallet">Create Digital Wallet</string>
    <string name="fund_digital_wallet">Fund Digital Wallet</string>
    <string name="fund_digital_wallet_amount_title">"Amount (€): "</string>
    <string name="fund_digital_wallet_amount">Enter amount</string>
    <string name="fund_wallet_proceed">Proceed</string>
    <string name="fund_wallet_cancel">Cancel</string>
    <string name="rating_customer_name">Enter Your Name</string>
    <string name="rate_text">Choose your rating</string>
    <string name="rating_feedback_prompt">Enter your feedback</string>
    <string name="feedback_submit">Send</string>
    <string name="rating_title">Give Your Feedback</string>
    <string name="client_notification_view_btn">View</string>
    <string name="client_notification_rate_btn">Rate Service</string>
    <string name="client_rating_feedback_text">Type your feedback</string>
    <string name="ignore">Ignore Text</string>
    <string name="cannot_get_address_auto">Address not found. Enter address manually.</string>
    <string name="irish_number_required">Phone number must have irish country code</string>
    <string name="house_keeping_facility_role">Company User</string>
    <string name="single_parent_role">User With Mental Health Problems</string>
    <string name="book_appointment_specialist">Select Specialist</string>
    <string name="book_appointment_specific_service">Select Specific Service</string>
    <string name="service_type">Service Type: %s</string>
    <string name="service_specialist_name">Service Specialist Name: %s</string>
    <string name="service_name">Service Name: %s</string>
    <string name="service_details">Service Details: %s (%s)</string>
    <string name="service_price">Service Price: €%s</string>
    <string name="service_discount_price">Discounted Price: €%s</string>
    <string name="available_places">Available Places: %s</string>
    <string name="service_start_date">Service Start Date</string>
    <string name="request_text">Dear Sirs,\n\nMy name is %s, %s, %s. I require your provided service %s, starting from %s.\n\nPlease let me know if you can accommodate my request.\n\nDate Created: %s\nTime Created: %s</string>
    <string name="submit_request">Submit Request</string>
    <string name="invalid_phone_number">A Valid Irish Number should start with 083, 085, 086, 087, 089 and be in total length of 10 digits.</string>
    <string name="user_records_not_found">Username and password do not match. Please try again</string>
    <string name="invalid_email">A Valid Email Address should contain a valid email domain (gmail.com, hotmail.com, yahoo.com, outlook.com, live.com) and has the @ sign before it</string>
    <string name="requesting_client_name">Customer name: %s %s</string>
    <string name="requesting_client_contact_number">Customer contact number: %s</string>
    <string name="requesting_client_email">Customer email address: %s</string>
    <string name="requesting_chosen_service_name">Chosen service name: %s</string>
    <string name="requesting_chosen_service_type">Chosen service type: %s</string>
    <string name="requesting_start_date">Selected start date: %s</string>
    <string name="requesting_service_price">Requested service price: €%s</string>
    <string name="requesting_service_discounted_price">Requested service discounted price: €%s</string>
    <string name="requesting_date_created">Date created: %s</string>
    <string name="requesting_time_created">Time created: %s</string>
    <string name="create_wallet_card_number">Card Number</string>
    <string name="create_wallet_card_expiry_month">MM</string>
    <string name="create_wallet_card_expiry_year">YY</string>
    <string name="create_wallet_card_cvv">CVV</string>
    <string name="create_wallet_card_holder_name">Card Holder Name</string>
</resources>