<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/requesting_client_name"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"
        android:id="@+id/facility_rating_detail_customer_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/requesting_chosen_service_name"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"
        android:id="@+id/facility_rating_detail_chosen_service_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/requesting_chosen_service_type"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"
        android:id="@+id/facility_rating_detail_chosen_service_type"/>


    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/txt_facility_rating_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srb_numberOfStars="5"
        android:padding="@dimen/padding_mini"
        android:layout_gravity="center"
        app:srb_starSize="@dimen/text_l"
        app:srb_borderColor="@android:color/transparent"
        app:srb_fillColor="@color/custom_facility_accent_color"
        app:srb_starBackgroundColor="@android:color/holo_orange_dark"
        android:layout_marginStart="@dimen/margin_midi"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/lorem/random"
        android:lines="7"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"
        android:id="@+id/facility_rating_detail_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/requesting_date_created"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"
        android:id="@+id/facility_rating_detail_date_created"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/requesting_time_created"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"
        android:id="@+id/facility_rating_detail_time_created"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="@dimen/button_width_xxl"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/margin_mini"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/padding_mini"
        android:text="@string/btn_client_booking_response_detail_okay"
        android:id="@+id/btn_facility_rating_okay"/>



</LinearLayout>